color & spacing fixes

--- a/style/widgets.scss
+++ b/style/widgets.scss
@@ -150,7 +150,7 @@
   border-color: transparent;;
 
   &:hover {
-    border-color: $modal-border-color;
+    border-color: #2F4F4F;
   }
 
   .title {
@@ -169,16 +169,14 @@
     .spacer {
       margin-left: 0.3rem;
       margin-right: 0.3rem;
+      margin-bottom: 0;
+      margin-top: 0;
     }
 
-    .bool-false {
+    .bool-false, .bool-true {
       cursor: pointer;
       color: grey;
-    }
-
-    .bool-true {
-      cursor: pointer;
-      color: grey;
+      margin: 0;
     }
 
     .active {
